# hamer

./: README.md  demo_simple.py  mediapipe_hand_detector.py  pyproject.toml  setup.py  vitpose_model.py
hamer/utils/: geometry.py
