[project]
name = "hamer"
version = "0.1.0"
description = "HaMeR as a package"
requires-python = "==3.10.*"
dependencies = [
    "absl-py==2.3.1",
    "addict==2.4.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiosignal==1.4.0",
    "antlr4-python3-runtime==4.9.3",
    "anyio==4.12.1",
    "async-timeout==5.0.1",
    "attrs==25.4.0",
    "av==16.1.0",
    "beautifulsoup4==4.14.3",
    "black==26.1.0",
    "braceexpand==0.1.7",
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "chumpy-fix==0.0.1",
    "click==8.3.1",
    "cloudpickle==3.1.2",
    "colorlog==6.10.1",
    "contourpy==1.3.2",
    "cuda-bindings==12.9.4",
    "cuda-pathfinder==1.2.2",
    "cycler==0.12.1",
    "Cython==3.2.4",
    "einops==0.8.1",
    "exceptiongroup==1.3.1",
    "filelock==3.20.0",
    "fonttools==4.61.1",
    "freetype-py==2.5.1",
    "frozenlist==1.8.0",
    "fsspec==2025.12.0",
    "fvcore==0.1.5.post20221221",
    "gdown==5.2.1",
    "grpcio==1.76.0",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface_hub==1.3.2",
    "hydra-colorlog==1.2.0",
    "hydra-core==1.3.2",
    "hydra-submitit-launcher==1.2.0",
    "idna==3.11",
    "ImageIO==2.37.2",
    "iopath==0.1.9",
    "Jinja2==3.1.6",
    "json-tricks==3.17.3",
    "kiwisolver==1.4.9",
    "lazy_loader==0.4",
    "lightning-utilities==0.15.2",
    "Markdown==3.10",
    "markdown-it-py==4.0.0",
    "MarkupSafe==2.1.5",
    "matplotlib==3.10.8",
    "mdurl==0.1.2",
    "mmcv==1.3.9",
    "mpmath==1.3.0",
    "multidict==6.7.0",
    "munkres==1.1.4",
    "mypy_extensions==1.1.0",
    "networkx==3.4.2",
    "numpy==2.2.6",
    "omegaconf==2.3.0",
    "opencv-python==4.13.0.90",
    "packaging==25.0",
    "pandas==2.3.3",
    "pathspec==1.0.3",
    "pillow==12.1.0",
    "platformdirs==4.5.1",
    "portalocker==3.2.0",
    "propcache==0.4.1",
    "protobuf==6.33.4",
    "pycocotools==2.0.11",
    "pyglet==2.1.12",
    "Pygments==2.19.2",
    "PyOpenGL==3.1.0",
    "pyparsing==3.3.1",
    "pyrender==0.1.45",
    "pyrootutils==1.0.4",
    "PySocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "pytokens==0.4.0",
    "pytorch-lightning==2.6.0",
    "pytz==2025.2",
    "PyYAML==6.0.3",
    "requests==2.32.5",
    "rich==14.2.0",
    "safetensors==0.7.0",
    "scikit-image==0.25.2",
    "scipy==1.15.3",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smplx==0.1.28",
    "soupsieve==2.8.3",
    "submitit==1.5.4",
    "sympy==1.14.0",
    "tabulate==0.9.0",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "termcolor==3.3.0",
    "tifffile==2025.5.10",
    "timm==1.0.24",
    "tomli==2.4.0",
    "torch==2.10.0+cu128",
    "torchmetrics==1.8.2",
    "torchvision==0.25.0+cu128",
    "tqdm==4.67.1",
    "trimesh==4.11.1",
    "triton==3.6.0",
    "typer-slim==0.21.1",
    "typing_extensions==4.15.0",
    "tzdata==2025.3",
    "urllib3==2.6.3",
    "webdataset==1.0.2",
    "Werkzeug==3.1.5",
    "xtcocotools==1.14.3",
    "yacs==0.1.8",
    "yapf==0.43.0",
    "yarl==1.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
find-links = [
    "https://download.pytorch.org/whl/cu128",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
